# embaralha_palavras

./: embaralha_palavras.py  pyproject.toml
