[tool.poetry]
name = "embaralha_palavras"
version = "0.1.0"
description = "embaralha palavras"
authors = ["Camila Gomes <7camilagomes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
